--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,8 +27,8 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                       @* <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        @* <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>*@
                         @*<li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -96,8 +96,6 @@
     <section id="gamesLobbyTable">
         <div class="container">
             <div class="row">
-
-
                 <div class="col-sm-10">
                     <div class="section-title">
                         <h2>Juegos disponibles</h2>
@@ -116,36 +114,37 @@
 
                 </div>
 
-                </>
+            </div>
 
-                <div class="col-md-12 col-sm-12">
+            <div class="col-md-12 col-sm-12">
 
-                    <div class="table-responsive">
+                <div class="table-responsive">
 
-                        <table class="table table-bordered table-hover" id="gamesTable-Lobby">
+                    <table class="table table-bordered table-hover" id="gamesTable-Lobby">
 
-                            <thead>
-                                <tr>
-                                    <th>
-                                        Identificador
-                                    </th>
-                                    <th>
-                                        Nombre
-                                    </th>
-                                    <th>
-                                        Unirme al juego
-                                    </th>
-                                </tr>
+                        <thead>
+                            <tr>
+                                <th>
+                                    Identificador
+                                </th>
+                                <th>
+                                    Nombre
+                                </th>
+                                <th>
+                                    Unirme al juego
+                                </th>
+                            </tr>
 
-                            </thead>
+                        </thead>
 
-                            <tbody id="gamesLobby-tboody">
-                            </tbody>
+                        <tbody id="gamesLobby-tboody">
+                        </tbody>
 
-                        </table>
-                    </div>
+                    </table>
                 </div>
+            </div>
     </section>
+
 
     <!-- Modal Join Game-->
     <div class="modal fade" id="modal-join-game" tabindex="-1" role="dialog" aria-labelledby="modalAddPlayer" aria-hidden="true">
@@ -213,6 +212,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Lista de participantes en owner -->
     <div class="container" id="participants-list">
         <div class="d-flex justify-content-center mb-4">
 
@@ -222,7 +223,6 @@
                         <h3>Participants List</h3>
                     </div>
                 </div>
-
                 <div class="card-body">
                     <div class="d-flex justify-content-center">
                         <ol start="1" id="part-list">
@@ -246,6 +246,8 @@
 
         </div>
     </div>
+
+    <!-- Lista de participantes en usuarios -->
     <div class="container" id="remoteParticipants-list">
         <div class="d-flex justify-content-center mb-4">
 
@@ -397,12 +399,6 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="js/remoteGame.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous">
-    </script>
-    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.
-0/sha256.min.js"></script>*@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
