--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                         <img class="card-img-top" src="images/planet.jpg" alt="Card image" style="width:398px;height:320px">
                         <div class="card-body">
                             <h4 class="card-title">Crear Partida</h4>
-                            <button class="btn btn-primary" id="localGame-btn">Iniciar</button>
+                            <button class="btn btn-outline-success" id="localGame-btn">Iniciar</button>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         <img class="card-img-top" src="images/3726696.webp" alt="Card image" style="width:380px;height:330px">
                         <div class="card-body">
                             <h4 class="card-title">Partida Remota</h4>
-                            <button class="btn btn-primary" id="btn-RemoteGame">Iniciar</button>
+                            <button class="btn btn-outline-success" id="btn-RemoteGame">Iniciar</button>
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" id="joinRemoteGame">Unirme</button>
+                    <button type="button" class="btn btn-outline-success" id="joinRemoteGame">Unirme</button>
                 </div>
             </div>
         </div>
@@ -244,10 +244,10 @@
                 <div class="card-footer">
                     <div class="d-flex justify-content-center">
                         <div class="col-lg-6 mb-1">
-                            <button class="btn btn-primary" id="display-modal">Añadir Jugador</button>
+                            <button class="btn btn-outline-success" id="display-modal">Añadir Jugador</button>
                         </div>
                         <div class="col-lg-6 mb-1">
-                            <button class="btn btn-primary" id="StarGame">Comenzar Juego</button>
+                            <button class="btn btn-outline-success" id="StarGame">Comenzar Juego</button>
                         </div>
                     </div>
                 </div>
@@ -287,7 +287,7 @@
                 <div class="card-footer">
                     <div class="d-flex justify-content-center">
                         <div class="mb-1">
-                            <button class="btn btn-primary" id="startRemoteGame">Comenzar Juego</button>
+                            <button class="btn btn-outline-success" id="startRemoteGame">Comenzar Juego</button>
                         </div>
                     </div>
                 </div>
@@ -318,7 +318,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" id="Add-player">Agregar Jugador</button>
+                    <button type="button" class="btn btn-outline-success" id="Add-player">Agregar Jugador</button>
                 </div>
             </div>
         </div>
@@ -373,7 +373,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-primary">Crear</button>
+                            <button type="submit" class="btn btn-outline-success">Crear</button>
                         </div>
                     </div>
 
