--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -85,7 +85,7 @@ html {
 
 body {
     margin-bottom: 60px;
-    background: linear-gradient(white, #4cff00 );
+    background: linear-gradient(white, #00CC00 );
 }
 
 #title {
