--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,12 +28,6 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        @* <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>*@
-                        @*<li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
                         <li>
                             <a id="config" role="button" class="button" data-target="#modalConfig" data-toggle="modal"><img src="/images/configuraciones.png"></a>
                         </li>
@@ -83,7 +77,7 @@
                     <div class="card" style="width:400px;height:460px">
                         <img class="card-img-top" src="images/3726696.webp" alt="Card image" style="width:380px;height:330px">
                         <div class="card-body">
-                            <h4 class="card-title">Partida Remota</h4>
+                            <h4 class="card-title">Unirse a una partida</h4>
                             <button class="btn btn-outline-success" id="btn-RemoteGame">Iniciar</button>
                         </div>
                     </div>
@@ -187,10 +181,10 @@
                         <tr>
 
                             <th>
-                                Exemplaries
+                                Citizens
                             </th>
                             <th>
-                                Psychos
+                                Enemies
                             </th>
                         </tr>
 
@@ -353,15 +347,15 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6 mb-1">
-                                        <div class="custom-control custom-checkbox">
+                                        <div class="custom-control custom-checkbox" id="localC">
                                             <input type="checkbox" class="custom-control-input" id="checkLocal">
                                             <label class="custom-control-label" for="checkLocal">Partida Local</label>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 mb-1">
-                                        <div class="custom-control custom-checkbox">
+                                        <div class="custom-control custom-checkbox" style="">
                                             <input type="checkbox" class="custom-control-input" id="checkRemote">
-                                            <label class="custom-control-label" for="checkRemote">Partida Remota</label>
+                                            <label class="custom-control-label" for="checkRemote">Crear partida</label>
                                         </div>
                                     </div>
                                 </div>
