--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
 
                 <div class="col-sm-10">
                     <div class="section-title">
-                        <h2>Juegos disponibles</h2>
+                        <h2>Juegos disponibles en lobby</h2>
                     </div>
 
                 </div>
@@ -181,10 +181,10 @@
                         <tr>
 
                             <th>
-                                Citizens
+                                Ejemplares
                             </th>
                             <th>
-                                Enemies
+                                Enemigos
                             </th>
                         </tr>
 
@@ -224,7 +224,7 @@
                         </button>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <h3>Participants List</h3>
+                        <h3>Lista de participantes</h3>
                     </div>
                 </div>
 
