cambios infradecimales. casi listo

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -184,6 +184,9 @@
                                 Ejemplares
                             </th>
                             <th>
+                                Decada
+                            </th>
+                            <th>
                                 Enemigos
                             </th>
                         </tr>
@@ -194,6 +197,9 @@
                         <tr>
                             <td>
                                 <label id="ExeScore" style="font-size: 25px">0</label>
+                            </td>
+                            <td>
+                                <label id="DecadeCount" style="font-size: 25px">0</label>
                             </td>
                             <td>
                                 <label id="PsychoScore" style="font-size: 25px">0</label>
@@ -354,8 +360,8 @@
                                     </div>
                                     <div class="col-lg-6 mb-1">
                                         <div class="custom-control custom-checkbox" style="">
-                                            <input type="checkbox" class="custom-control-input" id="checkRemote">
-                                            <label class="custom-control-label" for="checkRemote">Crear partida</label>
+                                           <!-- <input type="checkbox" class="custom-control-input" id="checkRemote">
+                                             <label class="custom-control-label" for="checkRemote">Crear partida</label>-->
                                         </div>
                                     </div>
                                 </div>
