Arreglos que indico el profe

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -349,7 +349,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="gamePassword">Contraseña de la partida</label>
-                                    <input type="password" class="form-control" id="gamePassword" placeholder="Contraseña" required>
+                                    <input type="password" class="form-control" id="gamePassword" placeholder="Contraseña" >
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6 mb-1">
