--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -156,8 +156,8 @@
                     <div class="form-group">
                         <label for="user-name" class="col-form-label">Nombre de usuario:</label>
                         <input type="text" class="form-control" id="user-name" required>
-                        <label for="password-game" class="col-form-label">Contraseña:</label>
-                        <input type="password" class="form-control" id="passwordRemoteGame" required>
+                        <label id="pwd" for="password-game" class="col-form-label">Contraseña:</label>
+                        <input id="input-pwd"type="password" class="form-control" id="passwordRemoteGame">
 
                     </div>
                 </div>
